--- a/file.css
+++ b/file.css
@@ -6,3 +6,15 @@ h1 {
 .hari {
   border: 1px solid black;
 }
+
+button {
+  border: 1px solid green;
+  background-color: black;
+  color: white;
+  padding: 10px;
+  margin-top: 10px;
+}
+
+button#hari {
+  margin-top: 0px;
+}
