--- a/file.css
+++ b/file.css
@@ -1,6 +1,9 @@
 h1 {
   color: green;
-  border: 1px solid gray;
+  text-align: center;
+  text-decoration-style: solid;
+  text-decoration-line: overline underline;
+  text-decoration-color: black;
 }
 
 .hari {
